[gd_scene format=3 uid="uid://cp0735yyo65s0"]

[ext_resource type="Material" uid="uid://bvcie6nuke58c" path="res://assets/Grass_material.tres" id="1_4vryo"]
[ext_resource type="Script" uid="uid://dh7dsch13kio6" path="res://scripts/level.gd" id="1_g1ckg"]
[ext_resource type="PackedScene" uid="uid://bk2te4oxquivp" path="res://scenes/barrel.tscn" id="3_t7v7a"]
[ext_resource type="Script" uid="uid://cvgnfu7i7lwc" path="res://scripts/player/camera_pivot.gd" id="4_xx6b8"]
[ext_resource type="PackedScene" uid="uid://y0gkedt6w0yb" path="res://scenes/button.tscn" id="5_f62st"]
[ext_resource type="PackedScene" uid="uid://dmmwselun6166" path="res://scenes/WinGate.tscn" id="6_w24lh"]
[ext_resource type="Material" uid="uid://d0hyi5n6ng25w" path="res://assets/demo/assets/materials/M_rock23_black_tp.tres" id="7_5sfmg"]
[ext_resource type="PackedScene" uid="uid://ck8q5movsdlbw" path="res://scenes/player/player.tscn" id="8_tsmbm"]
[ext_resource type="Script" uid="uid://c7eqpfeb4sb1g" path="res://scenes/levels/doorsLevel4.gd" id="8_xx6b8"]
[ext_resource type="PackedScene" uid="uid://cnr1lxgnsj8b1" path="res://scenes/player/cursor.tscn" id="9_y3vdi"]
[ext_resource type="Material" uid="uid://nbbdrx8vma80" path="res://assets/demo/assets/materials/M_rock23_tp.tres" id="11_t7v7a"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_q6dln"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_ig7tw"]
sky_material = SubResource("ProceduralSkyMaterial_q6dln")
process_mode = 1

[sub_resource type="Environment" id="Environment_qtppw"]
background_mode = 2
background_energy_multiplier = 1.5
sky = SubResource("Sky_ig7tw")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="Animation" id="Animation_xx6b8"]
resource_name = "Door_1_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doors/door1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.4591138, 2.1715152, 1.2907257), Vector3(2.4591138, -1.1857219, 1.2907257)]
}

[sub_resource type="Animation" id="Animation_f62st"]
resource_name = "Door_1_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doors/door1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.4591138, -1.1857219, 1.2907257), Vector3(2.4591138, 2.1715152, 1.2907257)]
}

[sub_resource type="Animation" id="Animation_w24lh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doors/door1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.4591138, 2.1715152, 1.2907257)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5sfmg"]
_data = {
&"Door_1_down": SubResource("Animation_xx6b8"),
&"Door_1_up": SubResource("Animation_f62st"),
&"RESET": SubResource("Animation_w24lh")
}

[sub_resource type="Animation" id="Animation_5sfmg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doors/door3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(5.931338, 2.1715152, -3.5697079)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("doors/door4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(5.931338, 2.1715152, -13.271513)]
}

[sub_resource type="Animation" id="Animation_ev8xs"]
resource_name = "door_3_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doors/door3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(5.931338, 2.1715152, -3.5697079), Vector3(5.931338, -1.1915691, -3.5697079)]
}

[sub_resource type="Animation" id="Animation_q6dln"]
resource_name = "door_3_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doors/door3:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(5.931338, -1.1915691, -3.5697079), Vector3(5.931338, 2.1715152, -3.5697079)]
}

[sub_resource type="Animation" id="Animation_qtppw"]
resource_name = "door_4_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doors/door4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(5.931338, 2.1715152, -13.271513), Vector3(5.931338, -1.170016, -13.271513)]
}

[sub_resource type="Animation" id="Animation_atlnk"]
resource_name = "door_4_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doors/door4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(5.931338, -1.170016, -13.271513), Vector3(5.931338, 2.1715152, -13.271513)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qtppw"]
_data = {
&"RESET": SubResource("Animation_5sfmg"),
&"door_3_down": SubResource("Animation_ev8xs"),
&"door_3_up": SubResource("Animation_q6dln"),
&"door_4_down": SubResource("Animation_qtppw"),
&"door_4_up": SubResource("Animation_atlnk")
}

[sub_resource type="Animation" id="Animation_tsmbm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doors/door2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.4591138, -1.1530583, -8.550473)]
}

[sub_resource type="Animation" id="Animation_y3vdi"]
resource_name = "door_2_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doors/door2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.4591138, 2.1764371, -8.550473), Vector3(2.4591138, -1.1530583, -8.550473)]
}

[sub_resource type="Animation" id="Animation_irrt8"]
resource_name = "door_2_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("doors/door2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.4591138, -1.1530583, -8.550473), Vector3(2.4591138, 2.1764371, -8.550473)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ev8xs"]
_data = {
&"RESET": SubResource("Animation_tsmbm"),
&"door_2_down": SubResource("Animation_y3vdi"),
&"door_2_up": SubResource("Animation_irrt8")
}

[sub_resource type="PlaneMesh" id="PlaneMesh_ev8xs"]
size = Vector2(35.938, 23.454)

[node name="Level4" type="Node3D" unique_id=1691353493]
script = ExtResource("1_g1ckg")

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=665395595]
environment = SubResource("Environment_qtppw")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=377735439]
transform = Transform3D(0.9515944, 0.27506387, -0.13714173, 1.12299485e-08, 0.44619778, 0.8949344, 0.30735648, -0.85161483, 0.42459926, 4.4145103, 26.4, 28.703588)
light_color = Color(0.3779191, 0.37791878, 0.37791884, 1)
shadow_enabled = true

[node name="barrel" parent="." unique_id=1021782119 instance=ExtResource("3_t7v7a")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 11.033186, 2.0893753, -5.8402157)

[node name="barrel3" parent="." unique_id=884180412 instance=ExtResource("3_t7v7a")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -4.000985, 1.1136634, -16.360281)

[node name="barrel4" parent="." unique_id=1006953356 instance=ExtResource("3_t7v7a")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 2.293067, 1.1136634, -3.7326107)

[node name="barrel5" parent="." unique_id=947689647 instance=ExtResource("3_t7v7a")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 10.620781, 2.297545, 5.479321)

[node name="barrel6" parent="." unique_id=832093884 instance=ExtResource("3_t7v7a")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 1.1678352, 2.297545, 9.139788)

[node name="button" parent="." unique_id=351347304 instance=ExtResource("5_f62st")]
transform = Transform3D(-7.6713505e-08, 0, 1.7550002, 0, 1.7550002, 0, -1.7550002, 0, -7.6713505e-08, -4.260723, 0.47560954, -4.044512)

[node name="button4" parent="." unique_id=1183520701 instance=ExtResource("5_f62st")]
transform = Transform3D(-7.6713505e-08, 0, 1.7550002, 0, 1.7550002, 0, -1.7550002, 0, -7.6713505e-08, 10.70693, 0.47560954, 7.3118496)

[node name="button3" parent="." unique_id=178865666 instance=ExtResource("5_f62st")]
transform = Transform3D(-7.6713505e-08, 0, 1.7550002, 0, 1.7550002, 0, -1.7550002, 0, -7.6713505e-08, 10.556008, 0.47560954, -3.4531374)

[node name="button2" parent="." unique_id=1928569083 instance=ExtResource("5_f62st")]
transform = Transform3D(-7.6713505e-08, 0, 1.7550002, 0, 1.7550002, 0, -1.7550002, 0, -7.6713505e-08, -4.111359, 0.47560954, -16.387072)

[node name="Node3D" parent="." unique_id=1191173673 instance=ExtResource("6_w24lh")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 11.120386, 1.5636635, -15.111075)

[node name="walls" type="Node" parent="." unique_id=1149149829]

[node name="Player" parent="." unique_id=1418047351 instance=ExtResource("8_tsmbm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.026919, 0.8338423, 8.473988)

[node name="Camera_pivot" type="Node3D" parent="Player" unique_id=418524717]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -8.026919, -0.8338423, 2.9182167)
script = ExtResource("4_xx6b8")
camera_speed = 0.5
zoom_speed = 0.5

[node name="Camera3D" type="Camera3D" parent="Player/Camera_pivot" unique_id=301169000]
transform = Transform3D(-4.371139e-08, -0.86602545, 0.49999997, 0, 0.49999997, 0.86602545, -1, 3.7855173e-08, -2.1855692e-08, 0.95290947, 14.736977, -3.4012256)
size = 16.982

[node name="Sprite2D" parent="." unique_id=2109625003 instance=ExtResource("9_y3vdi")]

[node name="doors" type="Node" parent="." unique_id=1381357618]
script = ExtResource("8_xx6b8")

[node name="door1" type="CSGBox3D" parent="doors" unique_id=1723123527]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 2.4591138, 2.1715152, 1.2907257)
use_collision = true
collision_layer = 63
collision_mask = 63
size = Vector3(1, 3.4277344, 5.572113)
material = ExtResource("11_t7v7a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="doors/door1" unique_id=666976724]
root_node = NodePath("../../..")
libraries/ = SubResource("AnimationLibrary_5sfmg")

[node name="door3" type="CSGBox3D" parent="doors" unique_id=289493427]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.931338, 2.1715152, -3.5697079)
use_collision = true
collision_layer = 63
collision_mask = 63
size = Vector3(1, 3.4277344, 5.572113)
material = ExtResource("11_t7v7a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="doors/door3" unique_id=827651070]
root_node = NodePath("../../..")
libraries/ = SubResource("AnimationLibrary_qtppw")

[node name="door4" type="CSGBox3D" parent="doors" unique_id=1910623005]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.931338, 2.1715152, -13.271513)
use_collision = true
collision_layer = 63
collision_mask = 63
size = Vector3(1, 3.4277344, 5.572113)
material = ExtResource("11_t7v7a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="doors/door4" unique_id=1497249392]
root_node = NodePath("../../..")
libraries/ = SubResource("AnimationLibrary_qtppw")

[node name="door2" type="CSGBox3D" parent="doors" unique_id=2039123680]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 2.4591138, -1.1530583, -8.550473)
use_collision = true
collision_layer = 63
collision_mask = 63
size = Vector3(1, 3.4277344, 5.572113)
material = ExtResource("11_t7v7a")

[node name="AnimationPlayer" type="AnimationPlayer" parent="doors/door2" unique_id=1900577692]
root_node = NodePath("../../..")
libraries/ = SubResource("AnimationLibrary_ev8xs")

[node name="Grass" type="CSGBox3D" parent="." unique_id=1072619563]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 4.019306, 0.06366348, -0.04990673)
use_collision = true
collision_layer = 3
collision_mask = 3
size = Vector3(35.93799, 1, 23.454132)
material = ExtResource("1_4vryo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Grass" unique_id=1471185344]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.49024487, 0)
mesh = SubResource("PlaneMesh_ev8xs")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="." unique_id=1690077028]
use_collision = true
collision_layer = 265
collision_mask = 265

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D" unique_id=1549280155]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -4.004027, 1.9186697, 1.286901)
use_collision = true
collision_layer = 63
collision_mask = 63
size = Vector3(1, 3.7192383, 7.345703)
material = ExtResource("7_5sfmg")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D/CSGBox3D" unique_id=941487344]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.003661871, -0.9071009, -0.030426025)
operation = 2
use_collision = true
size = Vector3(1.3579102, 0.7725544, 2.5708618)
material = ExtResource("7_5sfmg")

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D" unique_id=105564452]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 10.566713, 2.1883774, 1.286901)
use_collision = true
collision_layer = 63
collision_mask = 63
size = Vector3(1, 3.4277344, 10.609863)
material = ExtResource("7_5sfmg")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D/CSGBox3D2" unique_id=1212506102]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.003661871, -1.0771921, -0.030426025)
operation = 2
use_collision = true
size = Vector3(1.3579102, 0.7725544, 2.5708618)
material = ExtResource("7_5sfmg")

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D" unique_id=411987460]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -4.004028, 2.1883774, -8.551113)
use_collision = true
collision_layer = 63
collision_mask = 63
size = Vector3(1, 3.4277344, 7.345703)
material = ExtResource("7_5sfmg")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D/CSGBox3D3" unique_id=92039507]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0036621094, -1.0650737, -0.030426025)
operation = 2
use_collision = true
size = Vector3(1.3579102, 0.7725544, 2.5708618)
material = ExtResource("7_5sfmg")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D" unique_id=1336403912]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 10.566713, 2.1883774, -8.551115)
use_collision = true
collision_layer = 63
collision_mask = 63
size = Vector3(1, 3.4277344, 10.609863)
material = ExtResource("7_5sfmg")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D" unique_id=1914280383]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.9037957, 2.1883774, 0.45781636)
use_collision = true
collision_layer = 63
collision_mask = 63
size = Vector3(1, 3.4277344, 2.578308)
material = ExtResource("7_5sfmg")

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D" unique_id=1772862328]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.9037957, 2.1883774, -7.4319487)
use_collision = true
collision_layer = 63
collision_mask = 63
size = Vector3(1, 3.4277344, 2.1138306)
material = ExtResource("7_5sfmg")

[node name="CSGBox3D7" type="CSGBox3D" parent="CSGCombiner3D" unique_id=849514404]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.9037957, 2.1883774, -9.43535)
use_collision = true
collision_layer = 63
collision_mask = 63
size = Vector3(1, 3.4277344, 2.1138306)
material = ExtResource("7_5sfmg")

[node name="CSGBox3D8" type="CSGBox3D" parent="CSGCombiner3D" unique_id=66866423]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.897994, 2.1883774, -17.174063)
use_collision = true
collision_layer = 63
collision_mask = 63
size = Vector3(1, 3.4277344, 2.1138306)
material = ExtResource("7_5sfmg")
